@startuml

title __SETTING's Class Diagram__\n

  namespace com.example.bbs {
    namespace ui.setting {
      class com.example.bbs.ui.setting.Music {
          - music_adult : String
          - music_name : String
          - music_path : Integer
          + Music()
          + getMusic_adult()
          + getMusic_name()
          + getMusic_path()
          + setMusic_adult()
          + setMusic_name()
          + setMusic_path()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.setting {
      class com.example.bbs.ui.setting.MusicAdapter {
          - context : Context
          - data : List<Music>
          - resource : int
          + MusicAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.setting {
      class com.example.bbs.ui.setting.MusicShow {
          ~ handler : Handler
          ~ timeCount : Runnable
          - MusicPlayBar : ProgressBar
          - Position : int
          - Stop_Music : Button
          - alreadyMusicTime : TextView
          - cancel : Button
          - flag : Boolean
          - musicTime : TextView
          - music_adult : String[]
          - music_path : int[]
          - musics : List<Music>
          - start_music : Button
          + calculateTime()
          # onCreate()
          - initData()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.setting {
      class com.example.bbs.ui.setting.MusicSqliteOpenHelper {
          {static} - mInstance : SQLiteOpenHelper
          {static} + getMInstance()
          + onCreate()
          + onUpgrade()
          - MusicSqliteOpenHelper()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.setting {
      class com.example.bbs.ui.setting.SettingFragment {
          - out_login : Button
          - root : View
          - set_music : Button
          - user_name : TextView
          + onCreateView()
          ~ init()
      }
    }
  }
  

  com.example.bbs.ui.setting.MusicAdapter -up-|> android.widget.BaseAdapter
  com.example.bbs.ui.setting.MusicShow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.setting.MusicSqliteOpenHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.bbs.ui.setting.SettingFragment -up-|> androidx.fragment.app.Fragment
  com.example.bbs.ui.setting.SettingFragment o-- com.example.bbs.ui.login.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
